--- a/Content/CssFiles/Programs.css
+++ b/Content/CssFiles/Programs.css
@@ -1,5 +1,5 @@
 body {
-  background: url('../pictures/tahoe.jpg') no-repeat;
+  background: url('../Pictures/Tahoe.jpg') no-repeat;
   background-size: cover;
   font-family: 'Century Gothic';
   color: white;
