--- a/Content/CssFiles/Resume.css
+++ b/Content/CssFiles/Resume.css
@@ -1,6 +1,6 @@
 
 body {
-  background: url('../pictures/tahoe.jpg') no-repeat;
+  background: url('../Pictures/Tahoe.jpg') no-repeat;
   background-size: cover;
   font-family: 'Century Gothic';
   color: white;
