--- a/Content/CssFiles/Resume.css
+++ b/Content/CssFiles/Resume.css
@@ -1,40 +1,98 @@
+@import "../../Utilities/NavBar.css";
+@import "../../Utilities/DefaultCss.css";
 
-body {
-  background: url('../Pictures/Tahoe.jpg') no-repeat;
-  background-size: cover;
-  font-family: 'Century Gothic';
+#resume-tab{
+  background-color: #717171;
+}
+/* Slideshow container */
+.slideshow-container {
+  max-width: 1000px;
+  position: relative;
+  margin: auto;
+}
+
+/* Hide the images by default */
+.mySlides {
+  display: none;
+}
+
+/* Next & previous buttons */
+.prev, .next {
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  width: auto;
+  margin-top: -22px;
+  padding: 16px;
   color: white;
+  font-weight: bold;
+  font-size: 18px;
+  transition: 0.6s ease;
+  border-radius: 0 3px 3px 0;
+  user-select: none;
+}
+
+/* Position the "next button" to the right */
+.next {
+  right: 0;
+  border-radius: 3px 0 0 3px;
+}
+
+/* On hover, add a black background color with a little bit see-through */
+.prev:hover, .next:hover {
+  background-color: rgba(0,0,0,0.8);
+}
+
+/* Caption text */
+.text {
+  color: #f2f2f2;
+  font-size: 15px;
+  padding: 8px 12px;
+  position: absolute;
+  bottom: 8px;
+  width: 100%;
   text-align: center;
-  padding-left: auto;
-  padding-right: auto;
-  min-width: 50%;
-  min-height: 630px;
-  max-width: 1400px;
-  max-height: 630px;
 }
 
-ul {
-  list-style: none;
+/* Number text (1/3 etc) */
+.numbertext {
+  color: #f2f2f2;
+  font-size: 12px;
+  padding: 8px 12px;
+  position: absolute;
+  top: 0;
 }
 
-a {
-  color: white;
-  text-decoration: none;
+/* The dots/bullets/indicators */
+.dot {
+  cursor: pointer;
+  height: 15px;
+  width: 15px;
+  margin: 0 2px;
+  background-color: #bbb;
+  border-radius: 50%;
+  display: inline-block;
+  transition: background-color 0.6s ease;
 }
 
-#socialMedia {
-  text-align: right;
-  margin-top: 70px;
-  min-height: 100%;
-  min-width: 900px;
-  z-index: 19;
+.active, .dot:hover {
+  background-color: #717171;
 }
 
-#socialMedia ul li {
-  padding-right: 20px;
+/* Fading animation */
+.fade {
+  -webkit-animation-name: fade;
+  -webkit-animation-duration: 1.5s;
+  animation-name: fade;
+  animation-duration: 1.5s;
 }
 
+@-webkit-keyframes fade {
+  from {opacity: .4}
+  to {opacity: 1}
+}
 
-#socialMedia ul li a {
-  color: black;
+@keyframes fade {
+  from {opacity: .4}
+  to {opacity: 1}
 }
