--- a/Utilities/NavBar.css
+++ b/Utilities/NavBar.css
@@ -1,4 +1,4 @@
-
+/*
 #navigation {
   width: 100%;
   height: 65px;
@@ -28,7 +28,7 @@
 #navigation ul li ul li{
   /* border: .5px white solid;
   border-radius: 0; */
-  display: none;
+  /* display: none;
 }
 
 #navigation ul li ul li a {
@@ -49,4 +49,33 @@
 }
 #chapman a:hover{
   color: red;
+} */
+
+.icon-bar {
+  width: 100%; /* Full-width */
+  background-color: #143AB0; /* Dark-grey background */
+  overflow: auto; /* Overflow due to float */
+}
+.icon-bar a {
+  float: left; /* Float links side by side */
+  text-align: center; /* Center-align text */
+  width: 20%; /* Equal width (5 icons with 20% width each = 100%) */
+  padding: 12px 0; /* Some top and bottom padding */
+  transition: all 0.3s ease; /* Add transition for hover effects */
+  color: white; /* White text color */
+  font-size: 36px; /* Increased font size */
+}
+.icon-bar div {
+  width: 20%;
+}
+
+.icon-bar div a {
+  width: 33%;
+}
+
+.icon-bar a:hover {
+  background-color: #90A5E3; /* Add a hover color */
+}
+.social-media{
+  float: right;
 }
