--- a/Content/CssFiles/Resume.css
+++ b/Content/CssFiles/Resume.css
@@ -6,9 +6,25 @@
 }
 /* Slideshow container */
 .slideshow-container {
-  max-width: 1000px;
-  position: relative;
-  margin: auto;
+  width: 80%;
+  height: 60%;
+  position: fixed;
+  margin-top: 10%;
+  overflow: hidden;
+  left:10%;
+}
+.slideshow-container div {
+  height: 80%;
+  width: 80%;
+  margin-left: auto;
+  margin-right: auto;
+}
+.slideshow-container div img {
+  height: 100%;
+  width: 100%;
+}
+.slideshow-container a {
+
 }
 
 /* Hide the images by default */
@@ -56,6 +72,8 @@
 
 /* Number text (1/3 etc) */
 .numbertext {
+  max-width: 50%;
+  max-height: 50%;
   color: #f2f2f2;
   font-size: 12px;
   padding: 8px 12px;
