--- a/Content/CssFiles/Resume.css
+++ b/Content/CssFiles/Resume.css
@@ -86,11 +86,18 @@
   cursor: pointer;
   height: 15px;
   width: 15px;
-  margin: 0 2px;
+  margin: auto;
   background-color: #bbb;
   border-radius: 50%;
   display: inline-block;
   transition: background-color 0.6s ease;
+}
+
+#dots{
+  position: absolute;
+  width: 100%;
+  height: 10%;
+  text-align:center;
 }
 
 .active, .dot:hover {
