--- a/Content/CssFiles/Index.css
+++ b/Content/CssFiles/Index.css
@@ -4,3 +4,26 @@
 #home-tab-color {
   background-color: #717171;
 }
+
+.sidebar {
+  background-color: #143AB0;
+  background: #143AB0;
+  width: 20%;
+  height: 60%;
+  display: inline-block;
+  padding:10px;
+  margin-left: 5px;
+}
+.sidebar ul li {
+  height: 200px;
+  width: 100%;
+}
+
+.sidebar img {
+  height: 100px;
+  width: 100px;
+  border-radius: 40px;
+  border-color: white;
+  border-width: thick;
+  border-style: solid;
+}
