--- a/Content/CssFiles/Index.css
+++ b/Content/CssFiles/Index.css
@@ -6,24 +6,47 @@
 }
 
 .sidebar {
-  background-color: #143AB0;
-  background: #143AB0;
-  width: 20%;
-  height: 60%;
+  /* background-color: #143AB0; */
+  /* background: #143AB0;
+  width: 250px; */
   display: inline-block;
-  padding:10px;
-  margin-left: 5px;
-}
-.sidebar ul li {
-  height: 200px;
-  width: 100%;
+  /* padding:10px; */
+  margin-left: 10px;
 }
 
 .sidebar img {
-  height: 100px;
-  width: 100px;
+  height: 250px;
+  width: 250px;
   border-radius: 40px;
   border-color: white;
   border-width: thick;
   border-style: solid;
+  float: left;
+}
+.sidebar span {
+  animation: glowShadow 1.5s linear infinite alternate;
+}
+
+#circle {
+   width: 20px;
+   height: 20px;
+   background: #00FF00;
+   border-radius: 50%;
+   display: inline-block;
+   margin-left: 5px;
+   margin-right: 5px;
+   /* animation: glowImage 1.5s linear infinite alternate; */
+ }
+ @keyframes glowImage{
+  to {
+    -webkit-filter: brightness(2);
+     filter: brightness(2);
+  }
+}
+@keyframes glowShadow{
+  to {
+    /* box-shadow: 0px 0px 35px 15px #143AB0; for general atomics Blue*/
+    box-shadow: 0px 0px 20px 2px #00FF00;
+
+  }
 }
