--- a/Content/CssFiles/Index.css
+++ b/Content/CssFiles/Index.css
@@ -1,30 +1,46 @@
 @import "../../Utilities/NavBar.css";
 @import "../../Utilities/DefaultCss.css";
 
+body{
+  height: 2000px
+}
 #home-tab-color {
   background-color: #717171;
 }
+section{
+  background-color: #143AB0;
+  border-radius: 20px;
+  text-align:center;
+  padding-bottom: 10px;
 
-.sidebar {
-  /* background-color: #143AB0; */
-  /* background: #143AB0;
-  width: 250px; */
-  display: inline-block;
-  /* padding:10px; */
+}
+.left-sidebar {
+  width: 275px;
   margin-left: 10px;
+  float: left;
 }
 
-.sidebar img {
+.left-sidebar img {
   height: 250px;
   width: 250px;
   border-radius: 40px;
   border-color: white;
   border-width: thick;
   border-style: solid;
-  float: left;
+  margin: 5px 0 10px 0;
 }
-.sidebar span {
-  animation: glowShadow 1.5s linear infinite alternate;
+
+.left-sidebar span {
+  display: inline-block;
+}
+.left-sidebar h3 {
+  display: inline-block;
+}
+
+.right-side {
+  display: inline-block;
+  float: right;
+  padding: 15px;
 }
 
 #circle {
@@ -33,8 +49,7 @@
    background: #00FF00;
    border-radius: 50%;
    display: inline-block;
-   margin-left: 5px;
-   margin-right: 5px;
+   animation: glowShadow 1.5s linear infinite alternate;
    /* animation: glowImage 1.5s linear infinite alternate; */
  }
  @keyframes glowImage{
