--- a/Utilities/DefaultCss.css
+++ b/Utilities/DefaultCss.css
@@ -1,3 +1,8 @@
+* {
+  margin: 0;
+  padding: 0;
+}
+
 html{
   width: 100%;
   height: 100%;
@@ -10,7 +15,6 @@ body {
   color: white;
   min-width: 100%;
   min-height: 100%;
-  margin:0;
 }
 
 ul {
