adding footer.css to index.css

--- a/Content/CssFiles/Index.css
+++ b/Content/CssFiles/Index.css
@@ -1,5 +1,6 @@
 @import "../../Utilities/NavBar.css";
 @import "../../Utilities/DefaultCss.css";
+@import "../../Utilities/Footer.css";
 
 body{
   height: 2000px;
