deleted unnecessary files and started new

--- a/Utilities/DefaultCss.css
+++ b/Utilities/DefaultCss.css
@@ -25,3 +25,19 @@ a {
   color: white;
   text-decoration: none;
 }
+
+body{
+  background-color: #F0F0F0;
+}
+
+h1 {
+  font-size: 50px;
+}
+
+h2 {
+  font-size: 30px;
+}
+
+h4{
+  font-size: 19px;
+}
