adding footer and nav bar to general atomics site

--- a/Content/CssFiles/GeneralAtomics.css
+++ b/Content/CssFiles/GeneralAtomics.css
@@ -1,3 +1,7 @@
+@import "../../Utilities/NavBar.css";
+@import "../../Utilities/DefaultCss.css";
+@import "../../Utilities/Footer.css";
+
 section{
   height: 600px;
 }
