fixed url to files

--- a/Content/CssFiles/GeneralAtomics.css
+++ b/Content/CssFiles/GeneralAtomics.css
@@ -7,13 +7,13 @@ section{
 }
 
 #GA-About {
-  background-image: url("../Pictures/GeneralAtomicsAbout.jpg");
+  background-image: url("../../Pictures/GeneralAtomicsAbout.jpg");
 }
 #GA-Tools{
-  background-image: url("../Pictures/UKProtector.jpg");
+  background-image: url("../../Pictures/UKProtector.jpg");
 
 }
 #GA-Lessons{
-  background-image: url("../Pictures/Block50.jpg");
+  background-image: url("../../Pictures/Block50.jpg");
 
 }
