--- a/Utilities/DefaultCss.css
+++ b/Utilities/DefaultCss.css
@@ -13,8 +13,9 @@ body {
   background-size: auto; */
   font-family: 'Century Gothic';
   color: white;
-  min-width: 100%;
+  min-width: 900px;
   min-height: 100%;
+  padding-top: 70px;
 }
 
 ul {
