--- a/Utilities/NavBar.css
+++ b/Utilities/NavBar.css
@@ -6,6 +6,12 @@ body{
   overflow: auto; /* Overflow due to float */
   box-shadow: -2px 2px 4px 1.5px #888;
   margin: 7px 5px 5px 5px;
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100%;
+  margin-bottom: 30px;
+  z-index: 1;
   /* top: 50%;
   left: 50%; */
 }
